# keva

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  GEMINI.md  Makefile  README.md  cov.json
.agent/rules/: 01-rust-idioms.md  02-architecture-boundaries.md  03-version-control.md  04-testing-standards.md
.agent/skills/core-ledger-math/: SKILL.md
.agent/workflows/: new-endpoint.yaml  sdd-pipeline.yaml  start-task.yaml  submit-pr.yaml  sync-workspace.yaml
.github/workflows/: ci.yml
crates/keva-accounts/: Cargo.toml
crates/keva-api/: Cargo.toml
crates/keva-catalog/: Cargo.toml
crates/keva-ledger/: Cargo.toml
crates/keva-ledger/proptest-regressions/: domain.txt
crates/keva-ledger/src/: domain.rs  tests.rs
crates/keva-worker/: Cargo.toml
docs/: README.md
docs/architecture/: ARCHITECTURE.md  README.md  cdc-audit-worker.md
docs/architecture/adr/: 0001-use-occ-over-event-sourcing.md  0002-read-write-splitting-over-cqrs.md  0003-in-memory-caching-postgres-notify.md  0004-stateless-read-after-write-hmac.md  0005-immutable-ledger-queries-for-eod.md  006-native-cdc-via-pgoutput-vs-jvm-middleware.md
docs/domain/: README.md  account-lifecycle.md  balance-mechanics.md  end-of-day-processing.md  glossary.md
docs/operations/: README.md
docs/operations/edge-cases/: 0001-the-microsecond-double-spend.md  0002-network-timeout-replays-idempotency-key-misuse.md  0003-double-click-problem.md
docs/specs/ledger/: 01-core-primitives.spec.md  02-cryptography.spec.md  03-audit-traceability.spec.md  04-interlocking-cryptography.spec.md
keva-catalog/: Cargo.toml
