[workspace]
members = ["crates/*"]
resolver = "2"

# Add this section to define global package metadata
[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Suraj <surajchhetry@gmail.com>"]

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sha2 = { version = "0.10.9" }
