[package]
name = "keva-worker"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true }
postgres-types = { version = "0.2.12", features = ["derive"] }
futures-util = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
